<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="16dp"
            android:orientation="vertical"
            android:background="@color/white">

            <com.one20.unisonui.widget.UnisonSwitch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Switch"
                style="@style/UnisonSwitch.Light"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="Check 1"
                style="@style/UnisonCheckbox.Light"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="Check 2"
                style="@style/UnisonCheckbox.Light"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="Radio 1"
                    style="@style/UnisonRadioButton.Light"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="Radio 2"
                    style="@style/UnisonRadioButton.Light"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Radio 3"
                    style="@style/UnisonRadioButton.Light"/>

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="16dp"
            android:orientation="vertical"
            android:background="@color/background_dark">

            <com.one20.unisonui.widget.UnisonSwitch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Switch"
                style="@style/UnisonSwitch.Dark"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="Check 1"
                style="@style/UnisonCheckbox.Dark"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="Check 2"
                style="@style/UnisonCheckbox.Dark"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="Radio 1"
                    style="@style/UnisonRadioButton.Dark"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="Radio 2"
                    style="@style/UnisonRadioButton.Dark"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Radio 3"
                    style="@style/UnisonRadioButton.Dark"/>

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:background="@color/white">
            <SeekBar
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:progress="20"
                style="@style/UnisonSeekbar.Light"/>

            <SeekBar
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:progress="40"
                style="@style/UnisonSeekbar.Light"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:background="@color/background_dark">
            <SeekBar
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:progress="60"
                style="@style/UnisonSeekbar.Dark"/>

            <SeekBar
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:progress="80"
                style="@style/UnisonSeekbar.Dark"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>